This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Memory leak in Reg2Py()
Type: behavior Stage: resolved
Components: Extension Modules, Windows Versions: Python 3.3, Python 3.4, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: jcea Nosy List: jcea, luisgf, python-dev
Priority: normal Keywords: patch

Created on 2014-03-13 11:27 by luisgf, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
winreg_leak_v33.patch luisgf, 2014-03-13 11:40
Messages (6)
msg213384 - (view) Author: Luis G.F (luisgf) Date: 2014-03-13 11:27
A memory leak can happend in Reg2Py() loosing the reference to str pointer. 

See file PC/winreg.c +947
msg213385 - (view) Author: Luis G.F (luisgf) Date: 2014-03-13 11:40
Attach of patch for the 3.3.5 version.
msg213409 - (view) Author: Jesús Cea Avión (jcea) * (Python committer) Date: 2014-03-13 15:56
I take care of this.
msg213414 - (view) Author: Jesús Cea Avión (jcea) * (Python committer) Date: 2014-03-13 16:19
This is not actually important, since the program will finish a second after this. But cleanup is simple enough.
msg213415 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2014-03-13 16:38
New changeset b44a3f6676b8 by Jesus Cea in branch '2.7':
Closes #20908: Memory leak in Reg2Py()
http://hg.python.org/cpython/rev/b44a3f6676b8

New changeset 07968254be96 by Jesus Cea in branch '3.3':
Closes #20908: Memory leak in Reg2Py()
http://hg.python.org/cpython/rev/07968254be96

New changeset 227405961789 by Jesus Cea in branch 'default':
MERGE: Closes #20908: Memory leak in Reg2Py()
http://hg.python.org/cpython/rev/227405961789
msg213428 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2014-03-13 18:09
New changeset 6e3e91662216 by Victor Stinner in branch 'default':
Issue #20908: PyMem_Malloc() must be used with PyMem_Free(), not with free()
http://hg.python.org/cpython/rev/6e3e91662216
History
Date User Action Args
2022-04-11 14:57:59adminsetgithub: 65107
2014-03-13 18:09:10python-devsetmessages: + msg213428
2014-03-13 16:38:39python-devsetstatus: open -> closed

nosy: + python-dev
messages: + msg213415

resolution: fixed
stage: resolved
2014-03-13 16:19:05jceasetmessages: + msg213414
versions: + Python 2.7
2014-03-13 15:56:02jceasetassignee: jcea

messages: + msg213409
nosy: + jcea
2014-03-13 11:40:23luisgfsetfiles: + winreg_leak_v33.patch
keywords: + patch
messages: + msg213385

versions: + Python 3.3
2014-03-13 11:27:46luisgfcreate