Issue #20908: PyMem_Malloc() must be used with PyMem_Free(), not with free()